<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    <LinearLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/text_size"
            android:text="@string/bike_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="_"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:textSize="@dimen/text_size"
            android:id="@+id/tv_bike_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/text_size"
            android:text="@string/lock_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="_"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/text_size"
            android:layout_weight="1"
            android:id="@+id/tv_lock_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:visibility="gone"
        android:id="@+id/qrcode_encode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/encode_qrcode" />
    <android.support.v7.widget.LinearLayoutCompat
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:id="@+id/qrcode_dencode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dencode_qrcode" />
        <Button
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:id="@+id/bt_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear" />
    </android.support.v7.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/qrcode_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
